--- a/UBWebsite/css/style.css
+++ b/UBWebsite/css/style.css
@@ -332,8 +332,8 @@ i:before {
 }
 
 .banner_inner_text h2 {
-  font-size: 72px;
-  color: #0b1033;
+  font-size: 68px;
+  color: white;
   font-family: "Roboto", sans-serif;
   font-weight: normal;
 }
