--- a/UBWebsite/css/style.css
+++ b/UBWebsite/css/style.css
@@ -535,7 +535,7 @@ i:before {
   height: 6px;
   width: 6px;
   border-radius: 50%;
-  background: #fff;
+  background: rgb(101, 131, 204);;
   display: inline-block;
   margin-right: 8px;
 }
@@ -2298,7 +2298,7 @@ i:before {
   padding-bottom: 55px;
 }
 
-.f_about_widget p {
+.f_subs_widget p {
   font-size: 15px;
   line-height: 28px;
   color: #fff;
