--- a/UBWebsite/css/responsive.css
+++ b/UBWebsite/css/responsive.css
@@ -195,7 +195,7 @@
     .service_solution_area::before {
         opacity: 1;
     }
-    .blog_right_sidebar{
+    .intro_right_sidebar{
         max-width: 270px;
         margin-top: 100px;
     }
@@ -234,7 +234,7 @@
         padding-left: 0px;
         padding-top: 10px;
     }
-    .blog_img .blog_date {
+    .intro_img .intro_date {
         position: relative;
         left: 30px;
         top: 22px;
@@ -293,10 +293,10 @@
     .portfolio_filter {
         padding: 95px 0px 50px 0px;
     }
-    .s_blog_social ul li:first-child {
+    .s_intro_social ul li:first-child {
         margin-left: 15px;
     }
-    .s_blog_social ul li {
+    .s_intro_social ul li {
         margin-left: 15px;
     }
     .mileston_item {
@@ -313,34 +313,34 @@
     .c_title h2 {
         font-size: 32px;
     }
-    .blog_text {
+    .intro_text {
         padding: 40px 15px 65px 15px;
     }
-    .blog_img .blog_date {
+    .intro_img .intro_date {
         left: 15px;
     }
-    .s_blog_social {
+    .s_intro_social {
         padding-left: 15px;
     }
-    .blog_author .media {
+    .intro_author .media {
         display: block;
     }
-    .blog_author .media .d-flex {
+    .intro_author .media .d-flex {
         padding-right: 0px;
         margin-bottom: 20px;
     }
-    .blog_comment .media {
+    .intro_comment .media {
         display: block;
     }
-    .blog_comment .media .d-flex {
+    .intro_comment .media .d-flex {
         display: block !important;
         padding: 20px 0px 0px 0px;
     }
-    .blog_comment .media .media-body {
+    .intro_comment .media .media-body {
         padding-left: 0px;
         padding-top: 20px;
     }
-    .blog_comment h3 {
+    .intro_comment h3 {
         padding-bottom: 50px;
         padding-top: 50px;
     }
